--- a/.env.local
+++ b/.env.local
@@ -16,3 +16,6 @@ ENCRYPTION_KEY=b'roGuZEvuUCVYA_HLPXnsnIC-upbtjCj_0oXBqeh6AEU='
 ACCESS_TOKEN_EXPIRE_MINUTES=60
 SENDGRID_API_KEY=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
 SENDGRID_ADMIN_MAIL=devendra@biz4group.com
+OPENAI_API_KEY=""
+MILVUS_PORT=19530
+MILVUS_HOST=localhost
